qt6/gen_qtextobject.h

typedef QTextBlock::iterator QTextBlock__iterator;
typedef QTextFrame::iterator QTextFrame__iterator;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlock__iterator QTextBlock__iterator;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextBlockUserData QTextBlockUserData;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFragment QTextFragment;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextFrameLayoutData QTextFrameLayoutData;
typedef struct QTextLayout QTextLayout;
typedef struct QTextList QTextList;
typedef struct QTextObject QTextObject;
typedef struct QTimerEvent QTimerEvent;
QMetaObject* QTextObject_metaObject(const QTextObject* self);
void* QTextObject_metacast(QTextObject* self, const char* param1);
int QTextObject_metacall(QTextObject* self, int param1, int param2, void** param3);
struct miqt_string QTextObject_tr(const char* s);
QTextFormat* QTextObject_format(const QTextObject* self);
int QTextObject_formatIndex(const QTextObject* self);
QTextDocument* QTextObject_document(const QTextObject* self);
int QTextObject_objectIndex(const QTextObject* self);
struct miqt_string QTextObject_tr2(const char* s, const char* c);
struct miqt_string QTextObject_tr3(const char* s, const char* c, int n);
const QMetaObject* QTextObject_staticMetaObject();
QMetaObject* QTextBlockGroup_metaObject(const QTextBlockGroup* self);
void* QTextBlockGroup_metacast(QTextBlockGroup* self, const char* param1);
int QTextBlockGroup_metacall(QTextBlockGroup* self, int param1, int param2, void** param3);
struct miqt_string QTextBlockGroup_tr(const char* s);
struct miqt_string QTextBlockGroup_tr2(const char* s, const char* c);
struct miqt_string QTextBlockGroup_tr3(const char* s, const char* c, int n);
const QMetaObject* QTextBlockGroup_staticMetaObject();
void QTextFrameLayoutData_operatorAssign(QTextFrameLayoutData* self, QTextFrameLayoutData* param1);
void QTextFrameLayoutData_delete(QTextFrameLayoutData* self);
QTextFrame* QTextFrame_new(QTextDocument* doc);
QMetaObject* QTextFrame_metaObject(const QTextFrame* self);
void* QTextFrame_metacast(QTextFrame* self, const char* param1);
int QTextFrame_metacall(QTextFrame* self, int param1, int param2, void** param3);
struct miqt_string QTextFrame_tr(const char* s);
void QTextFrame_setFrameFormat(QTextFrame* self, QTextFrameFormat* format);
QTextFrameFormat* QTextFrame_frameFormat(const QTextFrame* self);
QTextCursor* QTextFrame_firstCursorPosition(const QTextFrame* self);
QTextCursor* QTextFrame_lastCursorPosition(const QTextFrame* self);
int QTextFrame_firstPosition(const QTextFrame* self);
int QTextFrame_lastPosition(const QTextFrame* self);
QTextFrameLayoutData* QTextFrame_layoutData(const QTextFrame* self);
void QTextFrame_setLayoutData(QTextFrame* self, QTextFrameLayoutData* data);
struct miqt_array /* of QTextFrame* */  QTextFrame_childFrames(const QTextFrame* self);
QTextFrame* QTextFrame_parentFrame(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_begin(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_end(const QTextFrame* self);
struct miqt_string QTextFrame_tr2(const char* s, const char* c);
struct miqt_string QTextFrame_tr3(const char* s, const char* c, int n);
bool QTextFrame_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTextFrame_virtualbase_metaObject(const void* self);
bool QTextFrame_override_virtual_metacast(void* self, intptr_t slot);
void* QTextFrame_virtualbase_metacast(void* self, const char* param1);
bool QTextFrame_override_virtual_metacall(void* self, intptr_t slot);
int QTextFrame_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTextFrame_override_virtual_event(void* self, intptr_t slot);
bool QTextFrame_virtualbase_event(void* self, QEvent* event);
bool QTextFrame_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTextFrame_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTextFrame_override_virtual_timerEvent(void* self, intptr_t slot);
void QTextFrame_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTextFrame_override_virtual_childEvent(void* self, intptr_t slot);
void QTextFrame_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTextFrame_override_virtual_customEvent(void* self, intptr_t slot);
void QTextFrame_virtualbase_customEvent(void* self, QEvent* event);
bool QTextFrame_override_virtual_connectNotify(void* self, intptr_t slot);
void QTextFrame_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTextFrame_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTextFrame_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTextFrame_staticMetaObject();
void QTextFrame_delete(QTextFrame* self);
void QTextBlockUserData_operatorAssign(QTextBlockUserData* self, QTextBlockUserData* param1);
void QTextBlockUserData_delete(QTextBlockUserData* self);
QTextBlock* QTextBlock_new();
QTextBlock* QTextBlock_new2(QTextBlock* o);
void QTextBlock_operatorAssign(QTextBlock* self, QTextBlock* o);
bool QTextBlock_isValid(const QTextBlock* self);
bool QTextBlock_operatorEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_operatorNotEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_operatorLesser(const QTextBlock* self, QTextBlock* o);
int QTextBlock_position(const QTextBlock* self);
int QTextBlock_length(const QTextBlock* self);
bool QTextBlock_contains(const QTextBlock* self, int position);
QTextLayout* QTextBlock_layout(const QTextBlock* self);
void QTextBlock_clearLayout(QTextBlock* self);
QTextBlockFormat* QTextBlock_blockFormat(const QTextBlock* self);
int QTextBlock_blockFormatIndex(const QTextBlock* self);
QTextCharFormat* QTextBlock_charFormat(const QTextBlock* self);
int QTextBlock_charFormatIndex(const QTextBlock* self);
int QTextBlock_textDirection(const QTextBlock* self);
struct miqt_string QTextBlock_text(const QTextBlock* self);
struct miqt_array /* of QTextLayout__FormatRange* */  QTextBlock_textFormats(const QTextBlock* self);
QTextDocument* QTextBlock_document(const QTextBlock* self);
QTextList* QTextBlock_textList(const QTextBlock* self);
QTextBlockUserData* QTextBlock_userData(const QTextBlock* self);
void QTextBlock_setUserData(QTextBlock* self, QTextBlockUserData* data);
int QTextBlock_userState(const QTextBlock* self);
void QTextBlock_setUserState(QTextBlock* self, int state);
int QTextBlock_revision(const QTextBlock* self);
void QTextBlock_setRevision(QTextBlock* self, int rev);
bool QTextBlock_isVisible(const QTextBlock* self);
void QTextBlock_setVisible(QTextBlock* self, bool visible);
int QTextBlock_blockNumber(const QTextBlock* self);
int QTextBlock_firstLineNumber(const QTextBlock* self);
void QTextBlock_setLineCount(QTextBlock* self, int count);
int QTextBlock_lineCount(const QTextBlock* self);
QTextBlock__iterator* QTextBlock_begin(const QTextBlock* self);
QTextBlock__iterator* QTextBlock_end(const QTextBlock* self);
QTextBlock* QTextBlock_next(const QTextBlock* self);
QTextBlock* QTextBlock_previous(const QTextBlock* self);
int QTextBlock_fragmentIndex(const QTextBlock* self);
void QTextBlock_delete(QTextBlock* self);
QTextFragment* QTextFragment_new();
QTextFragment* QTextFragment_new2(QTextFragment* o);
void QTextFragment_operatorAssign(QTextFragment* self, QTextFragment* o);
bool QTextFragment_isValid(const QTextFragment* self);
bool QTextFragment_operatorEqual(const QTextFragment* self, QTextFragment* o);
bool QTextFragment_operatorNotEqual(const QTextFragment* self, QTextFragment* o);
bool QTextFragment_operatorLesser(const QTextFragment* self, QTextFragment* o);
int QTextFragment_position(const QTextFragment* self);
int QTextFragment_length(const QTextFragment* self);
bool QTextFragment_contains(const QTextFragment* self, int position);
QTextCharFormat* QTextFragment_charFormat(const QTextFragment* self);
int QTextFragment_charFormatIndex(const QTextFragment* self);
struct miqt_string QTextFragment_text(const QTextFragment* self);
struct miqt_array /* of QGlyphRun* */  QTextFragment_glyphRuns(const QTextFragment* self);
struct miqt_array /* of QGlyphRun* */  QTextFragment_glyphRuns1(const QTextFragment* self, int from);