qt6/gen_qtextobject.nim


proc fcQTextObject_metaObject(self: pointer, ): pointer {.importc: "QTextObject_metaObject".}
proc fcQTextObject_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextObject_metacast".}
proc fcQTextObject_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextObject_metacall".}
proc fcQTextObject_tr(s: cstring): struct_miqt_string {.importc: "QTextObject_tr".}
proc fcQTextObject_format(self: pointer, ): pointer {.importc: "QTextObject_format".}
proc fcQTextObject_formatIndex(self: pointer, ): cint {.importc: "QTextObject_formatIndex".}
proc fcQTextObject_document(self: pointer, ): pointer {.importc: "QTextObject_document".}
proc fcQTextObject_objectIndex(self: pointer, ): cint {.importc: "QTextObject_objectIndex".}
proc fcQTextObject_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextObject_tr2".}
proc fcQTextObject_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextObject_tr3".}
proc fcQTextObject_staticMetaObject(): pointer {.importc: "QTextObject_staticMetaObject".}
proc fcQTextBlockGroup_metaObject(self: pointer, ): pointer {.importc: "QTextBlockGroup_metaObject".}
proc fcQTextBlockGroup_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextBlockGroup_metacast".}
proc fcQTextBlockGroup_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextBlockGroup_metacall".}
proc fcQTextBlockGroup_tr(s: cstring): struct_miqt_string {.importc: "QTextBlockGroup_tr".}
proc fcQTextBlockGroup_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextBlockGroup_tr2".}
proc fcQTextBlockGroup_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextBlockGroup_tr3".}
proc fcQTextBlockGroup_staticMetaObject(): pointer {.importc: "QTextBlockGroup_staticMetaObject".}
proc fcQTextFrameLayoutData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QTextFrameLayoutData_operatorAssign".}
proc fcQTextFrameLayoutData_delete(self: pointer) {.importc: "QTextFrameLayoutData_delete".}
proc fcQTextFrame_new(doc: pointer): ptr cQTextFrame {.importc: "QTextFrame_new".}
proc fcQTextFrame_metaObject(self: pointer, ): pointer {.importc: "QTextFrame_metaObject".}
proc fcQTextFrame_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextFrame_metacast".}
proc fcQTextFrame_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextFrame_metacall".}
proc fcQTextFrame_tr(s: cstring): struct_miqt_string {.importc: "QTextFrame_tr".}
proc fcQTextFrame_setFrameFormat(self: pointer, format: pointer): void {.importc: "QTextFrame_setFrameFormat".}
proc fcQTextFrame_frameFormat(self: pointer, ): pointer {.importc: "QTextFrame_frameFormat".}
proc fcQTextFrame_firstCursorPosition(self: pointer, ): pointer {.importc: "QTextFrame_firstCursorPosition".}
proc fcQTextFrame_lastCursorPosition(self: pointer, ): pointer {.importc: "QTextFrame_lastCursorPosition".}
proc fcQTextFrame_firstPosition(self: pointer, ): cint {.importc: "QTextFrame_firstPosition".}
proc fcQTextFrame_lastPosition(self: pointer, ): cint {.importc: "QTextFrame_lastPosition".}
proc fcQTextFrame_layoutData(self: pointer, ): pointer {.importc: "QTextFrame_layoutData".}
proc fcQTextFrame_setLayoutData(self: pointer, data: pointer): void {.importc: "QTextFrame_setLayoutData".}
proc fcQTextFrame_childFrames(self: pointer, ): struct_miqt_array {.importc: "QTextFrame_childFrames".}
proc fcQTextFrame_parentFrame(self: pointer, ): pointer {.importc: "QTextFrame_parentFrame".}
proc fcQTextFrame_begin(self: pointer, ): pointer {.importc: "QTextFrame_begin".}
proc fcQTextFrame_endX(self: pointer, ): pointer {.importc: "QTextFrame_end".}
proc fcQTextFrame_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextFrame_tr2".}
proc fcQTextFrame_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextFrame_tr3".}
proc fQTextFrame_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTextFrame_virtualbase_metaObject".}
proc fcQTextFrame_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_metaObject".}
proc fQTextFrame_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTextFrame_virtualbase_metacast".}
proc fcQTextFrame_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_metacast".}
proc fQTextFrame_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTextFrame_virtualbase_metacall".}
proc fcQTextFrame_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_metacall".}
proc fQTextFrame_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTextFrame_virtualbase_event".}
proc fcQTextFrame_override_virtual_event(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_event".}
proc fQTextFrame_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTextFrame_virtualbase_eventFilter".}
proc fcQTextFrame_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_eventFilter".}
proc fQTextFrame_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTextFrame_virtualbase_timerEvent".}
proc fcQTextFrame_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_timerEvent".}
proc fQTextFrame_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTextFrame_virtualbase_childEvent".}
proc fcQTextFrame_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_childEvent".}
proc fQTextFrame_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTextFrame_virtualbase_customEvent".}
proc fcQTextFrame_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_customEvent".}
proc fQTextFrame_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTextFrame_virtualbase_connectNotify".}
proc fcQTextFrame_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_connectNotify".}
proc fQTextFrame_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTextFrame_virtualbase_disconnectNotify".}
proc fcQTextFrame_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTextFrame_override_virtual_disconnectNotify".}
proc fcQTextFrame_staticMetaObject(): pointer {.importc: "QTextFrame_staticMetaObject".}
proc fcQTextFrame_delete(self: pointer) {.importc: "QTextFrame_delete".}
proc fcQTextBlockUserData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QTextBlockUserData_operatorAssign".}
proc fcQTextBlockUserData_delete(self: pointer) {.importc: "QTextBlockUserData_delete".}
proc fcQTextBlock_new(): ptr cQTextBlock {.importc: "QTextBlock_new".}
proc fcQTextBlock_new2(o: pointer): ptr cQTextBlock {.importc: "QTextBlock_new2".}
proc fcQTextBlock_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextBlock_operatorAssign".}
proc fcQTextBlock_isValid(self: pointer, ): bool {.importc: "QTextBlock_isValid".}
proc fcQTextBlock_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock_operatorEqual".}
proc fcQTextBlock_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextBlock_operatorNotEqual".}
proc fcQTextBlock_operatorLesser(self: pointer, o: pointer): bool {.importc: "QTextBlock_operatorLesser".}
proc fcQTextBlock_position(self: pointer, ): cint {.importc: "QTextBlock_position".}
proc fcQTextBlock_length(self: pointer, ): cint {.importc: "QTextBlock_length".}
proc fcQTextBlock_contains(self: pointer, position: cint): bool {.importc: "QTextBlock_contains".}
proc fcQTextBlock_layout(self: pointer, ): pointer {.importc: "QTextBlock_layout".}
proc fcQTextBlock_clearLayout(self: pointer, ): void {.importc: "QTextBlock_clearLayout".}
proc fcQTextBlock_blockFormat(self: pointer, ): pointer {.importc: "QTextBlock_blockFormat".}
proc fcQTextBlock_blockFormatIndex(self: pointer, ): cint {.importc: "QTextBlock_blockFormatIndex".}
proc fcQTextBlock_charFormat(self: pointer, ): pointer {.importc: "QTextBlock_charFormat".}
proc fcQTextBlock_charFormatIndex(self: pointer, ): cint {.importc: "QTextBlock_charFormatIndex".}
proc fcQTextBlock_textDirection(self: pointer, ): cint {.importc: "QTextBlock_textDirection".}
proc fcQTextBlock_text(self: pointer, ): struct_miqt_string {.importc: "QTextBlock_text".}
proc fcQTextBlock_textFormats(self: pointer, ): struct_miqt_array {.importc: "QTextBlock_textFormats".}
proc fcQTextBlock_document(self: pointer, ): pointer {.importc: "QTextBlock_document".}
proc fcQTextBlock_textList(self: pointer, ): pointer {.importc: "QTextBlock_textList".}
proc fcQTextBlock_userData(self: pointer, ): pointer {.importc: "QTextBlock_userData".}
proc fcQTextBlock_setUserData(self: pointer, data: pointer): void {.importc: "QTextBlock_setUserData".}
proc fcQTextBlock_userState(self: pointer, ): cint {.importc: "QTextBlock_userState".}
proc fcQTextBlock_setUserState(self: pointer, state: cint): void {.importc: "QTextBlock_setUserState".}
proc fcQTextBlock_revision(self: pointer, ): cint {.importc: "QTextBlock_revision".}
proc fcQTextBlock_setRevision(self: pointer, rev: cint): void {.importc: "QTextBlock_setRevision".}
proc fcQTextBlock_isVisible(self: pointer, ): bool {.importc: "QTextBlock_isVisible".}
proc fcQTextBlock_setVisible(self: pointer, visible: bool): void {.importc: "QTextBlock_setVisible".}
proc fcQTextBlock_blockNumber(self: pointer, ): cint {.importc: "QTextBlock_blockNumber".}
proc fcQTextBlock_firstLineNumber(self: pointer, ): cint {.importc: "QTextBlock_firstLineNumber".}
proc fcQTextBlock_setLineCount(self: pointer, count: cint): void {.importc: "QTextBlock_setLineCount".}
proc fcQTextBlock_lineCount(self: pointer, ): cint {.importc: "QTextBlock_lineCount".}
proc fcQTextBlock_begin(self: pointer, ): pointer {.importc: "QTextBlock_begin".}
proc fcQTextBlock_endX(self: pointer, ): pointer {.importc: "QTextBlock_end".}
proc fcQTextBlock_next(self: pointer, ): pointer {.importc: "QTextBlock_next".}
proc fcQTextBlock_previous(self: pointer, ): pointer {.importc: "QTextBlock_previous".}
proc fcQTextBlock_fragmentIndex(self: pointer, ): cint {.importc: "QTextBlock_fragmentIndex".}
proc fcQTextBlock_delete(self: pointer) {.importc: "QTextBlock_delete".}
proc fcQTextFragment_new(): ptr cQTextFragment {.importc: "QTextFragment_new".}
proc fcQTextFragment_new2(o: pointer): ptr cQTextFragment {.importc: "QTextFragment_new2".}
proc fcQTextFragment_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextFragment_operatorAssign".}
proc fcQTextFragment_isValid(self: pointer, ): bool {.importc: "QTextFragment_isValid".}
proc fcQTextFragment_operatorEqual(self: pointer, o: pointer): bool {.importc: "QTextFragment_operatorEqual".}
proc fcQTextFragment_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QTextFragment_operatorNotEqual".}
proc fcQTextFragment_operatorLesser(self: pointer, o: pointer): bool {.importc: "QTextFragment_operatorLesser".}
proc fcQTextFragment_position(self: pointer, ): cint {.importc: "QTextFragment_position".}
proc fcQTextFragment_length(self: pointer, ): cint {.importc: "QTextFragment_length".}
proc fcQTextFragment_contains(self: pointer, position: cint): bool {.importc: "QTextFragment_contains".}
proc fcQTextFragment_charFormat(self: pointer, ): pointer {.importc: "QTextFragment_charFormat".}
proc fcQTextFragment_charFormatIndex(self: pointer, ): cint {.importc: "QTextFragment_charFormatIndex".}
proc fcQTextFragment_text(self: pointer, ): struct_miqt_string {.importc: "QTextFragment_text".}
proc fcQTextFragment_glyphRuns(self: pointer, ): struct_miqt_array {.importc: "QTextFragment_glyphRuns".}
proc fcQTextFragment_glyphRuns1(self: pointer, fromVal: cint): struct_miqt_array {.importc: "QTextFragment_glyphRuns1".}
